# Computer_Vision

Computer_vision_main/: Computer_vision_main.sln
Computer_vision_main/Computer_vision_main/: Computer_vision_main.cpp  Computer_vision_main.vcxproj  Computer_vision_main.vcxproj.filters
Computer_vision_main/Computer_vision_main/x64/Debug/: Computer_vision_main.exe.recipe  Computer_vision_main.ilk  computer_vision_main.obj.enc  vc143.idb
Computer_vision_main/Computer_vision_main/x64/Debug/Computer.2cff79d2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Computer_vision_main.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
opencv-vscode/: CMakeLists.txt
opencv-vscode/src/: main.cpp
test-directory/: file2.txt
